Mon Jun 17 21:30:55 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added --enable-stack-trace option to configure.  Added
	  memory allocation stack trace support.  Added files
	  lib/silcutil/stacktrace.[ch].  Affected files are
	  lib/silcutil/silcmemory.[ch].

	* Fixed memory leaks from libraries and server.  Affected
	  files around the tree.

Sun Jun 16 11:49:45 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_MESSAGE_FLAG_UTF8 to the protocol specs and the
	  core library, and implemented it.  All textual messages SHOULD
	  use this flag and the message MUST be UTF-8 encoded.
	  All text messages sent by Irssi SILC client are now UTF-8
	  encoded (regardless whether the terminal supports UTF-8 or not).
	  Affected files are lib/silccore/silcchannel.h,
	  irssi/src/silc/core/silc-servers.c, silc-channels.c and
	  client_ops.c.

Sat Jun 15 18:23:39 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added lots of new statistics updating that was missing from
	  the server and router code.  Affected files in silcd/.

	* Sending SIGUSR1 signal to server now dumps the current
	  server statistics into /tmp directory.  Affected file is
	  silcd/silcd.c.

	* ROBODoc documented the lib/silccrypt/silchash.h.  Improved
	  the SILC Hash Interface also.  Added new functions
	  silc_hash_get_name, silc_hash_init, silc_hash_update and
	  silc_hash_final.  Affected file lib/silccrypt/silchash.c.

Sat Jun 15 12:09:14 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added some better info printing for client during connecting.
	  Affected file silcd/server_util.c.

	* Implemented the SILC_CHANNEL_UMODE_QUIET mode that can be used
	  to silence a user on a channel.  Affected files are
	  lib/silcclient/client_channel.c, irssi/src/silc/core/client_ops.c,
	  irssi/src/fe-common/silc/module-formats.[ch], silcd/command.c
	  and silcd/packet_receive.c.

	* Fixed a fatal bug in handling of malformed command payload.
	  Affected file silcd/command.c.
